--- a/neapoli.html
+++ b/neapoli.html
@@ -5,7 +5,7 @@
     <body>
         <p>作り方</p>
         塩を入れた熱湯で時間通りにゆでる<br>
-        玉ねぎは薄切りにして、ウインナーは5mm羽場で斜めに薄切りにする<br>
+        玉ねぎは薄切りにして、ウインナーは5mm幅で斜めに薄切りにする<br>
         フライパンに油を熱し、玉ねぎ・ピーマンを加え弱火で焼く<br>
         スパゲッティを加えて炒める<br>
         トマトケチャップで味をつける<br>
