--- a/kamoku2.html
+++ b/kamoku2.html
@@ -6,7 +6,7 @@
     <body>
         <h1>ビジネスコース</h1>
         <div class="box11">
-            <h2>情報ビジネス科</h2>
+            <h2>情報ビジネス科(2年制)</h2>
             <table>
                 <td>業務をスピーディかつ正確にこなすためのＩＴスキルや経営・会計の知識を学びます。チームで課題解決を図るためのコミュニケーション力も、企業連携活動に取り組むことで磨かれます。
                     これからの地域や業界の発展を担うビジネスパーソンを目指します！</td>
