--- a/kamokusyokai/top.html
+++ b/kamokusyokai/top.html
@@ -2,12 +2,24 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>コース紹介</title>
+    <link rel="stylesheet" href="top.css">
+    <title>盛岡情報ビジネス&デザイン専門学校コース紹介</title>
 </head>
 <body>
-    <h1>科目紹介</h1>
-    <a href="kamoku1.html">IT系コース紹介</a> <br>
-    <a href="kamoku1.htm2">ビジネス系コース紹介</a> <br>
-    <a href="kamoku1.htm3">デザイン系コース紹介</a> <br>
+    <h1>学科一覧</h1>
+    <div class="box11">
+        <table>
+            <tr>
+                <td class="index">IT</td>
+                <td class="index">ビジネス</td>
+                <td class="index">デザイン</td>
+            </tr>
+            <tr>
+                <td><a href="kamoku1.html"><img src="image/it.png" alt="IT"></a></td>
+                <td><a href="kamoku2.html"><img src="image/ビジネス.png" alt="ビジネス"></a></td>
+                <td><a href="kamoku3.html"><img src="image/images.png" alt=""></a></td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
