--- a/kamoku2.html
+++ b/kamoku2.html
@@ -9,11 +9,14 @@
             <h2>情報ビジネス科(2年制)</h2>
             <table>
                 <td>業務をスピーディかつ正確にこなすためのＩＴスキルや経営・会計の知識を学びます。チームで課題解決を図るためのコミュニケーション力も、企業連携活動に取り組むことで磨かれます。
-                    これからの地域や業界の発展を担うビジネスパーソンを目指します！</td>
+                    これからの地域や業界の発展を担うビジネスパーソンを目指します！
+                    <br><br>
+                    <b>目指せる職業</b><br>
+                    鉄道職員/企画開発/営業・販売スタッフ/ITソリューション営業/会計事務所
+                </td>
                 <td>&nbsp;</td>
                 <td><img src="img/ビジネス.png" alt="ビジネス"></td>
             </table>
         </div>
-        
     </body>
 </html>
